# Eon-AI-Project

./: .gitignore  CHANGELOG.md  COMMERCIAL_TERMS.md  CONTRIBUTING.md  GENESIS.json  LICENSE  README.md  benchmark_full.py  docker-compose.yml  requirements.txt  start_demo.sh  start_docker.sh
docker/mosquitto/config/: mosquitto.conf
docs/: COMPARISON_TINYML.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXPERIMENTAL_IDEAS.md  IMPROVEMENT_AREAS.md  INTEGRATION_STATUS.md  PROTOCOL.md  QUICK_REFERENCE.md  ROADMAP_IDEAS.md  WHITEPAPER.md  architecture.md  audit_report.md  benchmarks.md
docs/api/: collective_mind.html  core.html  egregore.html  esn.html  index.html  plasticity.html  protocol_1bit.yaml  search.js  tiny_lm_v2.html
docs/philosophy/: alchemical_transmutation.md  discovery_paradigm.md  egregore_integration.md  fractal_architecture.md  gematria_integration.md  tesis_inteligencia_escasa.md  thelema_integration.md  tzimtzum_protocol.md
docs/technical/: esn_spec.md
paper/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
paper/sections/: abstract.tex  conclusion.tex  experiments.tex  introduction.tex  methodology.tex
phase1-foundations/: README.md
phase1-foundations/python/: benchmark.py  setup.py
phase1-foundations/python/core/: __init__.py  aeon_birth.py  alchemy.py  anomaly_detector.py  archaic_protocol.py  circadian.py  collaborative_chat.py  genesis.py  genetic_miner.py  iching_oracle.py  meta_seed.py  seed_archaeologist.py  universal_miner.py
phase1-foundations/python/esn/: __init__.py  demo_prediction.py  esn.py  recursive_esn.py  streaming_esn.py
phase1-foundations/python/plasticity/: __init__.py  hebbian.py  hebbian_tzimtzum.py  morphing.py  tzimtzum.py
phase1-foundations/python/quantization/: __init__.py  adaptive_quantizer.py  quantizer.py
phase1-foundations/python/tests/: test_adaptive_quantizer.py  test_anomaly_detector.py  test_circadian.py  test_circadian_esn.py  test_collaborative_chat.py  test_discovery_paradigm.py  test_engine_improvements.py  test_genetic_miner.py  test_iching_oracle.py  test_integration.py  test_meta_seed.py  test_morphing.py  test_mystical_modules.py  test_portable_rng.py  test_quantizer.py  test_seed_archaeologist.py  test_streaming_esn.py  test_watermark.py
phase1-foundations/python/utils/: __init__.py  constants.py  matrix_init.py  portable_rng.py  watermark.py
phase2-core/: Dockerfile  Makefile  README.md  test_core
phase2-core/libAeon/: CMakeLists.txt  Makefile  continuous_demo  continuous_demo.c  demo.c  find_seed  find_seed.c  libAeon.c  libAeon.h  test_aeon.c
phase2-core/libAeon/src/: benchmark_energy  benchmark_energy.c  tinyml_ref  tinyml_ref.c
phase2-core/tests/: test_core.c
phase3-integration/: README.md  aeon.js  package.json
phase3-integration/demos/: dream.html  index.html
phase3-integration/demos/js/: dream.js
phase4-hardware/: README.md
phase4-hardware/arduino/: Aeon.cpp  Aeon.h  library.properties  test_syntax.cpp
phase4-hardware/arduino/examples/SineWave/: SineWave.ino
phase4-hardware/esp32/: AeonESP32.h
phase4-hardware/esp32/examples/: EnergyMetrics.ino  LoRa_1Bit_Demo.ino  LoRa_RangeTest.ino
phase4-hardware/esp32/examples/WiFiPredict/: WiFiPredict.ino
phase5-applications/: README.md  temperature_predictor.py
phase5-applications/bio-monitor/: bio_monitor  bio_monitor.c  simulate_rr.py
phase5-applications/voice-command/: simulate_audio.py  voice_kws  voice_kws.c
phase6-collective/: Dockerfile  Dockerfile.bridge  README.md  collective_mind.py  dashboard.html  egregore.py  mqtt_client.py  protocol_1bit.py  quantum_sync.py  setup.py  ws_bridge.py
phase6-collective/docs/: protocol_spec.md
phase6-collective/src/: mock_mqtt  mock_mqtt.c  quantization.c  quantization.h
phase6-collective/tests/: test_neural_watermark.py  test_quantum_sync.py  test_ws_bridge.py
phase7-language/: Dockerfile  README.md  server.py  setup.py  tiny_attention.py  tiny_lm.py  tiny_lm_v2.py
phase7-language/src/: benchmark_vocab.py  gematria.py  trie_vocab.py
phase7-language/tests/: test_tiny_attention.py  test_tiny_lm_v2.py
phase8-paper/: README.md  paper.tex
web/: Dockerfile  README.md  egregore_art.py  learning.py  server.py  setup.py
web/data/: Aeon-1b0cd33f_birth.json  Aeon-1b0cd33f_state.json  Aeon-Genesis-Demo_birth.json  Aeon-Genesis-Demo_state.json  Eon-ef50094c_birth.json  Eon-ef50094c_state.npz  Eon-ef50094c_state.pkl  chat_history.json  feedback.json  long_term_memory.json  stats.json
web/static/: index.html  vercel.json
web/static/css/: style.css
web/static/js/: aeon.js  alchemy.js  app.js  dashboard_v2.js  dream.js  egregore_visualizer.js
web/templates/: dashboard_v2.html
web/tests/: test_egregore_art.py  test_learning.py  test_server.py
